# OperationBaldr

./: .gitignore  OperationBaldr.kicad_pcb  OperationBaldr.kicad_pro  OperationBaldr.kicad_sch  README.md  ~OperationBaldr.kicad_pcb.lck
Custom.pretty/: DC_step_up.kicad_mod  RTC.kicad_mod  STM32_blackpill.kicad_mod  ZD1880.kicad_mod
cad/: Baldr.step
cad/case/: Baldr.step  Onshape link
cad/pcb/: Custom.kicad_sym  OperationBaldr.kicad_pcb  OperationBaldr.kicad_sch
cad/pcb/manufacture/gerbers/: OperationBaldr-B_Cu.gbr  OperationBaldr-B_Mask.gbr  OperationBaldr-B_Paste.gbr  OperationBaldr-B_Silkscreen.gbr  OperationBaldr-Edge_Cuts.gbr  OperationBaldr-F_Cu.gbr  OperationBaldr-F_Mask.gbr  OperationBaldr-F_Paste.gbr  OperationBaldr-F_Silkscreen.gbr  OperationBaldr-NPTH-drl_map.gbr  OperationBaldr-NPTH.drl  OperationBaldr-PTH-drl_map.gbr  OperationBaldr-PTH.drl  OperationBaldr-job.gbrjob
code/baldr/: Cargo.toml  Embed.toml  memory.x
code/baldr/src/: button.rs  main.rs  vfd.rs
manufacture/gerbers/: OperationBaldr-B_Cu.gbr  OperationBaldr-B_Mask.gbr  OperationBaldr-B_Paste.gbr  OperationBaldr-B_Silkscreen.gbr  OperationBaldr-Edge_Cuts.gbr  OperationBaldr-F_Cu.gbr  OperationBaldr-F_Mask.gbr  OperationBaldr-F_Paste.gbr  OperationBaldr-F_Silkscreen.gbr  OperationBaldr-NPTH-drl_map.gbr  OperationBaldr-NPTH.drl  OperationBaldr-PTH-drl_map.gbr  OperationBaldr-PTH.drl  OperationBaldr-job.gbrjob
