[package]
name = "baldr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
arrform = "0.1.1"
cortex-m = "^0.7.7"       # Access to the generic ARM peripherals
cortex-m-rt = "^0.7.3"   # Startup code for the ARM Core
cortex-m-semihosting = "0.5.0"
ds323x = "0.5.1"
embedded-hal = "^1.0.0"   # Access to generic embedded functions (`set_high`)
nb = "1.1.0"
panic-rtt-core = "0.2.1"
panic-semihosting = "0.6.0"


# Access to the STM32F411 HAL.
[dependencies.stm32f4xx-hal]
# STM32F103C8T6 contains a 64kB flash variant which is called "medium density"
features = ["stm32f411"]
version = "^0.21.0"

